--- a/app/public/wp-content/themes/holloway-univsersity-theme/css/modules/professor-card.scss
+++ b/app/public/wp-content/themes/holloway-univsersity-theme/css/modules/professor-card.scss
@@ -12,7 +12,6 @@
   display: inline-block;
   width: 200px;
   margin-right: 15px;
-  background-color: $darkOrange;
   overflow: hidden;
 
   .search-overlay & {
@@ -21,11 +20,10 @@
 
   &__image {
     display: block;
-    transition: opacity 0.3s ease-out, transform 0.3s ease-out;
+    transition: transform 0.3s ease-out;
   }
 
   &:hover &__image {
-    opacity: 0.8;
     transform: scale(1.1) rotate(4deg);
   }
 
@@ -38,11 +36,21 @@
     left: 0;
     right: 0;
     padding: 3px 10px;
-    background-color: adjust-color($darkOrange, $alpha: -0.15, $lightness: -9%, $saturation: -6%);
+    background-color: adjust-color(
+      $darkOrange,
+      $alpha: -0.15,
+      $lightness: -9%,
+      $saturation: -6%
+    );
   }
 
   &:hover &__name {
-    background-color: adjust-color($darkOrange, $alpha: -0.15, $lightness: -15%, $saturation: -6%);
+    background-color: adjust-color(
+      $darkOrange,
+      $alpha: -0.15,
+      $lightness: -15%,
+      $saturation: -6%
+    );
   }
 
   &__list-item {
