--- a/app/public/wp-content/themes/holloway-university-theme/css/modules/login.scss
+++ b/app/public/wp-content/themes/holloway-university-theme/css/modules/login.scss
@@ -17,7 +17,7 @@ body.login .button-primary:hover {
 }
 
 body.login {
-  background-color: $beige;
+  background-color: $beige-50;
 }
 
 .login h1 a {
