complete like button functionality. Custom REST API, security and live UI updates

--- a/app/public/wp-content/themes/holloway-university-theme/css/base/baseline.scss
+++ b/app/public/wp-content/themes/holloway-university-theme/css/base/baseline.scss
@@ -1,3 +1,9 @@
+@mixin atNavCollapse {
+  @media (min-width: 1340px) {
+    @content;
+  }
+}
+
 @mixin atSmall {
   @media (min-width: 530px) {
     @content;
