--- a/app/public/wp-content/themes/holloway-university-theme/css/modules/my-notes.scss
+++ b/app/public/wp-content/themes/holloway-university-theme/css/modules/my-notes.scss
@@ -19,7 +19,11 @@
 }
 
 .submit-note:hover {
-  background-color: adjust-color($darkOrange, $lightness: -10%, $saturation: -20%);
+  background-color: adjust-color(
+    $darkOrange,
+    $lightness: -10%,
+    $saturation: -20%
+  );
 }
 
 .edit-note,
@@ -49,7 +53,7 @@
 
 .note-title-field {
   width: 40%;
-  font-size: 1.85rem;
+  font-size: 1.5rem;
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 300;
   color: $mainBlue;
@@ -65,7 +69,7 @@
 
   @media (min-width: 635px) {
     width: 65%;
-    font-size: 3.125rem;
+    font-size: 2.2rem;
   }
 }
 
@@ -76,10 +80,10 @@
   display: block;
   width: 100%;
   line-height: 1.65;
-  font-size: 1.15rem;
+  font-size: 1rem;
   padding: 7px;
   border: 1px solid transparent;
-  height: 175px;
+  height: 150px;
   outline: none;
 }
 
@@ -111,7 +115,7 @@
   font-family: "Roboto", sans-serif;
   border: none;
   margin-bottom: 10px;
-  font-size: 1.15rem;
+  font-size: 1rem;
   box-sizing: border-box;
 }
 
@@ -124,7 +128,7 @@
   border: none;
   margin-bottom: 10px;
   height: 170px;
-  font-size: 1.15rem;
+  font-size: 1rem;
   line-height: 1.65;
 }
 
